--- a/realisation/index.html
+++ b/realisation/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <title>DELIVERY</title>
     <link rel="stylesheet" href="style.css">
@@ -13,11 +13,16 @@
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">SERVICES</a></li>
                 <li><a href="#">TRACK</a></li>
-                <li><a href="#">CONTACTS</a></li>
-                
-
+                <li><a href="#">CONTACTS</a></li>              
             </ul>
         </nav>
     </header>
+    <main>
+        <section id="contact">
+            <h2>International<br>delivery</h2>
+            <h3>7 days-150 countries</h3>
+
+        </section>
+    </main>
 </body>
 </html>
